    layout_good_cases: ERR=0, W/C=7, W/F=34, W/R=72
    layout_challenging_cases: ERR=35, W/C=7361, W/F=6398, W/R=4799
  * less overlaps in sequence diagrams between classifiers and their lifelines
  * less overlaps in sequence diagrams between neighbor lifelines
  * opening json-based database files is faster by factor 5

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 99 Jan 2023 11:00:00 +0200

crystal-facet-uml (1.45.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * On model changes, diffs on json data file are smaller (new sort order)
  * Search for empty fields omits stereo/value types; these are often empty
  * When exporting json files from command line, no .tmp-cfu file remains
  * No superfluous warnings from json_element_reader_skip_next_string anymore
  * No superfluous anomalies from data_database_reader_get_xy_by_uuid anymore
  * No superfluous errors in log during regular opening json data files
  * Application id changed from desktop.crystal-facet-uml to
    de.andreaswarnke.crystal-facet-uml

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 27 Nov 2022 16:00:00 +0200

crystal-facet-uml (1.44.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Find-Occurrence button added for faster navigation in the model

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 12 Nov 2022 11:00:00 +0200

crystal-facet-uml (1.43.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * License of file metainfo.xml changed from MIT to CC0-1.0

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 02 Nov 2022 20:30:00 +0200

crystal-facet-uml (1.43.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Typos fixed as proposed by Mike Gabriel

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 01 Nov 2022 06:00:00 +0200

crystal-facet-uml (1.43.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Timing and sequence diagrams do not show a 2d snap region while dragging
  * Errors at parsing json are shown to user including the line of occurrence